--- a/src/main/resources/templates/create-product.html
+++ b/src/main/resources/templates/create-product.html
@@ -3,11 +3,45 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Create Product</title>
-	 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+	<script>
+		$(document).ready(function(){
+			$("form").on("submit", function(){
+				alert("Your request to create a new product is being submitted!");
+			});
+		});
+	</script>
+	<script type="text/javascript">
+		function submitForm() {
+			let codeInput = document.getElementById("codeInput").value.trim();
+			let categoryInput = document.getElementById("categoryInput").value.trim();
+			let brandInput = document.getElementById("brandInput").value.trim();
+			let typeInput = document.getElementById("typeInput").value.trim();
+			let descriptionInput = document.getElementById("descriptionInput").value.trim();
+
+			if (codeInput.toLowerCase() === "null") {
+				codeInput = null;
+			}
+			if (categoryInput.toLowerCase() === "null") {
+				categoryInput = null;
+			}
+			if (brandInput.toLowerCase() === "null") {
+				brandInput = null;
+			}
+			if (typeInput.toLowerCase() === "null") {
+				typeInput = null;
+			}
+			if (descriptionInput.toLowerCase() === "null") {
+				descriptionInput = null;
+			}
+
+			document.getElementById("editProductForm").submit();
+		}
+	</script>
 </head>
 <body>
 	<h2>Create New Product</h2>
-	
+	<p><em>Input "null" for null value.</em></p>
 	<form action="/products/new" method="post" th:object="${product}">
 		<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 			<ul>
@@ -17,38 +51,38 @@
 		
 		<div class="form-group">
 			<label for="code">Code:</label>
-			<input type="text" id="code" name="code" class="form-control" th:field="*{code}">
+			<input id="codeInput" type="text" class="form-control" th:field="*{code}">
 			<span th:if="${#fields.hasErrors('code')}" th:errors="*{code}" class="text-danger"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="category">Category:</label>
-			<input type="text" id="category" name="category" class="form-control" th:field="*{category}">
+			<input id="categoryInput" type="text" class="form-control" th:field="*{category}">
 			<span th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="brand">Brand:</label>
-			<input type="text" id="brand" name="brand" class="form-control" th:field="*{brand}">
+			<input id="brandInput" type="text" class="form-control" th:field="*{brand}">
 			<span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}" class="text-danger"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="type">Type:</label>
-			<input type="text" id="type" name="type" class="form-control" th:field="*{type}">
+			<input id="typeInput" type="text" class="form-control" th:field="*{type}">
 			<span th:if="${#fields.hasErrors('type')}" th:errors="*{type}" class="text-danger"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="description">Description:</label>
-			<textarea id="description" name="description" class="form-control" th:field="*{description}"></textarea>
+			<textarea id="descriptionInput" class="form-control" th:field="*{description}"></textarea>
 			<span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-danger"></span>
 		</div>
 		
-		<button type="submit" class="btn btn-primary">Create</button>
+		<button type="submit" class="btn btn-primary" onclick="submitForm()">Create</button>
 	</form>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
